--- a/src/style/App.scss
+++ b/src/style/App.scss
@@ -102,3 +102,13 @@
   justify-content: center;
   align-items: center;
 }
+
+.sized-svg {
+  width: 1em;
+  height: 1em;
+}
+
+.sized-svg svg {
+  width: 100%;
+  height: 100%;
+}
